# hyprdvd

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/hyprdvd/: __init__.py  hyprDVD.py  hyprDVDManager.py  hyprdvd.py  ipc.py  main.py  screensaver.py  settings.py  utils.py
