[build-system]
requires = ['setuptools>=64.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'hyprdvd'
version = "0.4.1"
authors = [
	{ name='Nevimmu', email='nevimmu@gmail.com' },
]
description = 'Bouncy DVD-like terminal'
readme = 'README.md'
license = { file = 'LICENSE' }
requires-python = '>=3.7'
dependencies = [
	'argcomplete>=3.6.2'
]

[project.urls]
'Homepage' = 'https://github.com/nevimmu/'

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
hyprdvd = 'hyprdvd:main'

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
	'src/hyprdvd/settings.py'
]